--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -17,8 +17,8 @@
 }
 
 .btn--outline {
-  background-color: transparent;
-  color: #fff;
+  background-color: white;
+  color: black;
   padding: 8px 20px;
   border: 1px solid var(--primary);
   transition: all 0.3s ease-out;
@@ -37,7 +37,8 @@
 .btn--large:hover,
 .btn--medium:hover {
   transition: all 0.3s ease-out;
-  background: #fff;
-  color: #242424;
+  /* background: #fff; */
+  /* color: #242424; */
+  opacity: 0.8;
   transition: 250ms;
 }
