--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,4 +1,4 @@
-@import "../../global.scss";
+@import "./global.scss";
 
 .portfolioList {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
