--- a/src/components/Collab/Collab.css
+++ b/src/components/Collab/Collab.css
@@ -1,11 +1,13 @@
-.cards {
-  padding: 4rem;
+.collabs {
+  padding: 4rem 10rem;
   background: #fff;
+  justify-content: center;
+  align-items: center;
 }
 
-.cards h3 {
+.collabs h3 {
   /* font-size: 2em; */
-  color: darkgray;
+  color: #00838a;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -15,13 +17,18 @@ img {
   margin: 2em;
 }
 
-.cards__container {
+.collabs__container {
   display: flex;
   flex-flow: row;
   justify-content: center;
   /* max-width: 1120px; */
   width: 90%;
   margin: 0 auto;
+}
+
+hr {
+  size:2; 
+  /* width: 90%;  */
 }
 
 @media only screen and (min-width: 1200px) {
