--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  letter-spacing: 2px;
 }
 
 .home,
-.services,
-.products,
-.sign-up {
+.about,
+.solutions {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -16,28 +16,19 @@
   font-size: 3rem;
 }
 
-.services {
+.about {
   /* background-image: url('/images/img-2.jpg'); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #fff;
+  color: red;
   font-size: 100px;
 }
 
-.products {
+.solutions {
   /* background-image: url('/images/img-1.jpg'); */
   background-position: center;
   background-size: fill;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.sign-up {
-  /* background-image: url('/images/img-8.jpg'); */
-  background-position: center;
-  background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
