--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,20 +1,20 @@
 .cards {
-  padding: 4rem;
+  padding: 4rem 10rem;
   background: #fff;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h1 {
-  text-align: center;
+.cards h1 {
+  text-align: left;
   color: #00838a;
 }
 
 .cards__container {
   display: flex;
   flex-flow: column;
-  align-items: center;
-  max-width: 1120px;
-  width: 90%;
+  align-items: left;
+  /* max-width: 1120px; */
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -31,6 +31,7 @@ h1 {
   display: flex;
   flex: 1;
   margin: 0 1rem;
+  margin-left: 0;
   border-radius: 10px;
 }
 
