--- a/src/components/Hero/HeroSection.css
+++ b/src/components/Hero/HeroSection.css
@@ -23,6 +23,7 @@ video {
   color: #fff;
   font-size: 80px;
   margin-top: -100px;
+  text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
