--- a/src/components/solutionsList/solutionsList.scss
+++ b/src/components/solutionsList/solutionsList.scss
@@ -1,6 +1,6 @@
-@import "./global.scss";
+@import "../solutionsList/global.scss";
 
-.portfolioList {
+.solutionsList {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
   margin: 15px;
