--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,36 +1,47 @@
 .navbar {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-  height: 50px;
+  height: 80px;
   display: flex;
+  justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  padding-left: 10em;
-  /* position: sticky; */
+  position: sticky;
   top: 0;
   z-index: 999;
 }
 
 .navbar-container {
   display: flex;
+  justify-content: center;
   align-items: center;
-  height: 100px;
+  height: 80px;
   max-width: 1500px;
 }
 
-.navbar-container img {
-  width: 20%;
+.navbar-logo {
+  justify-self: start;
+  margin-left: 20px;
   margin-top: 2em;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80px;
+}
+
+.navbar-logo img {
+  width: 17%;
 }
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: repeat(4, auto);
   grid-gap: 10px;
   list-style: none;
   text-align: center;
   width: 60vw;
   justify-content: end;
-  margin-right: 10rem;
+  margin-right: 2rem;
   font-size: 0.8em;
 }
 
@@ -48,14 +59,18 @@
 }
 
 .nav-links:hover {
-  /* border-bottom: 4px solid #fff; */
-  color: #00c2cb;
-  transition: all 0.2s ease-out;
+  /* border-bottom: 4px solid #fff;
+  transition: all 0.2s ease-out; */
+  color: #00838a;
 }
 
-/* .fa-bars {
+.nav-item.active {
+  color: red;
+}
+
+.fa-bars {
   color: #fff;
-} */
+}
 
 .nav-links-mobile {
   display: none;
@@ -65,9 +80,88 @@
   display: none;
 }
 
-
 @media screen and (max-width: 960px) {
   .NavbarItems {
     position: relative;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+    background: #242222;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .navbar-logo img {
+    display: none;
+  }
+
+  .nav-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+
+  .nav-links:hover {
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 50%);
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times {
+    color: #fff;
+    font-size: 2rem;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
   }
 }
