--- a/src/components/misvis/misvis.css
+++ b/src/components/misvis/misvis.css
@@ -11,6 +11,12 @@
   /* background-color: #00838a; */
 }
 
+.title h1 {
+  color: white;
+  padding-top: 1em;
+  text-align: center;
+}
+
 .grid-item {
   margin: 1em 0;
   /* background-color: rgba(255, 255, 255, 0.8); */
