--- a/src/components/Solutions/solutions.scss
+++ b/src/components/Solutions/solutions.scss
@@ -1,9 +1,9 @@
 @import "../solutionsList/global.scss";
 
 .hero {
-  // background: url('../images/alex-kotliarskyi-QBpZGqEMsKg-unsplash.jpg') center center/cover no-repeat;
-  background-color: #00c2cb;;
-  height: 40vh;
+  background: url('../images/alex-kotliarskyi-QBpZGqEMsKg-unsplash.jpg') center center/cover no-repeat;
+  // background-color: #00c2cb;
+  height: 80vh;
   width: 100%;
   display: flex;
   flex-direction: column;
