--- a/src/components/Cards2/Cards.css
+++ b/src/components/Cards2/Cards.css
@@ -1,3 +1,17 @@
+.containerr {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  /* background-color: aquamarine; */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.icon-container {
+  font-size: 7em;
+  /* background-color: brown; */
+}
+
 .cardss {
   padding: 4rem 1rem;
   background: #fff;
@@ -27,6 +41,7 @@
   display: flex;
   flex: 1;
   margin: 0 1rem 24px;
+  justify-content: center;
 }
 
 .cardss__item__link {
@@ -42,7 +57,9 @@
   text-align: center;
   justify-content: center;
   width: 20em;
-  height: 15em;
+  margin-top: 0;
+  /* height: 15em; */
+  /* background-color: blueviolet; */
   /* border:1px solid #00838a; */
 }
 
@@ -60,9 +77,10 @@
 
 .cardss__item__img {
   /* transition: all 0.2s linear; */
-  transform: scale(6);
+  transform: scale(1);
   margin-top: 20%;
-  width: 20%;
+  width: 10%;
+  background-color: #00838a;
 }
 
 /* .cards__item__img {
