--- a/src/components/Flip/App.css
+++ b/src/components/Flip/App.css
@@ -3,6 +3,10 @@
   display: flex;
 }
 
+.app-container {
+  padding: 0 3em;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -13,6 +17,7 @@
   height: 150px;
   padding: 20px;
   color: white;
+
 }
 
 .App-title {
