--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,7 +25,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   height: 80px;
 }
 
