--- a/src/components/about__/about.css
+++ b/src/components/about__/about.css
@@ -1,9 +1,10 @@
 iframe 
 {
- display: block; 
- height: 90vh;
- width: 100%; 
+ /* display: block;  */
+ height: 80vh;
+ width: 80%; 
  border: none; 
- overflow-y: auto; 
- overflow-x: hidden;
+ /* overflow-y: auto;  */
+ /* overflow-x: hidden; */
+ padding-top: 0;
 }
