--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -1,5 +1,7 @@
 .timeline-container {
-  background-color: #00838a;
-  /* margin-bottom: 10em; */
   padding: 3em;
+}
+
+.vertical-timeline::before {
+  background-color: #1a1a1a;
 }
