--- a/src/components/Flip/App.css
+++ b/src/components/Flip/App.css
@@ -1,10 +1,12 @@
-.App {
-  text-align: center;
-  display: flex;
+.app-container {
+  padding: 0 10em;
 }
 
-.app-container {
-  padding: 0 3em;
+.App {
+  /* text-align: center; */
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  justify-content: center;
 }
 
 .App-logo {
@@ -12,27 +14,17 @@
   height: 80px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-
+.flip-container {
+  margin-bottom: 1em;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-.flippy-container {
-  margin-bottom: 20px;
+.flip-container h1 {
+  font-size: 7em;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
