--- a/src/components/Hero/HeroSection.css
+++ b/src/components/Hero/HeroSection.css
@@ -6,12 +6,12 @@ video {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  position: fixed;
+  /* position: fixed; */
+  position: absolute;
   z-index: -1;
 }
 
 .hero-container {
-  background: url('../video/video.mp4') center center/cover no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -42,29 +42,44 @@ video {
 
 .hero-btns {
   margin-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 1em;
 }
 
 .hero-btns .btn {
   margin: 6px;
   padding: 1em 5em;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .fa-play-circle {
   margin-left: 4px;
 }
 
-@media screen and (max-width: 960px) {
+@media (max-width: 1024px) {
+  .hero-container {
+    padding: 3em;
+  }
+
   .hero-container > h1 {
     font-size: 70px;
-    margin-top: -150px;
   }
 }
 
 @media screen and (max-width: 768px) {
+  video {
+    height: 50%;
+  }
+
+  .hero-container {
+    height: 60vh;
+  }
+
   .hero-container > h1 {
-    font-size: 50px;
-    margin-top: -100px;
+    font-size: 43px;
+    /* margin-top: -100px; */
+    margin-top: -1em;
+    color: blueviolet;
   }
 
   .hero-container > p {
