--- a/src/components/aboutDesc/community.css
+++ b/src/components/aboutDesc/community.css
@@ -1,5 +1,5 @@
 .community {
-  width: 90%;
+  width: 80%;
   /* justify-content: center; */
   /* align-items: center; */
 }
@@ -8,7 +8,7 @@
   font-size:6em;
   float: left;
   color: #00838a;
-  margin:1em;
+  margin:1em 0;
   text-align: left;
   line-height: 1em;
 }
@@ -21,48 +21,18 @@
   margin-bottom: 2em;
 }
 
-.community-desc h2{
-  font-size: 3em;
-  line-height: 1em;
-  margin-bottom: 1em;
-}
-
 .community-desc p{
   font-size: 1.5em;
   line-height: 1.4em;
   text-align: justify;
 }
 
-.testimoni {
-  /* display: inline-block; */
-  /* display: inline-grid; */
-  border-radius: 5px;
-  margin: 10px 0 75px 20px;
-  /* background-color: #00838a; */
-  color: black;
-  /* padding: 0 10em; */
-  display: none;
-}
+@media screen and (max-width: 1024px) {
+  .community-title h1 {
+    font-size: 3em;
+  }
 
-.testimoni-item p {
-  font-size: 0.3em;
-  margin-top: 0;
-  margin-bottom: 1em;
-}
-
-.testimoni-item span {
-  font-size: 0.5em;
-}
-
-.testimoni-container {
-  /* display: grid; */
-  /* grid-template-columns: repeat(1, 1fr); */
-  /* padding: 10px; */
-}
-.testimoni-item {
-  border: 1px solid black;
-  padding: 20px;
-  margin: 10px 15px 20px;
-  font-size: 30px;
-  text-align: center;
+  .community-desc p{
+    font-size: 1em;
+  }
 }
